--- a/MVVM/View/MasterView.xaml
+++ b/MVVM/View/MasterView.xaml
@@ -3,7 +3,17 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:ViewModel="clr-namespace:MVVM.ViewModel"
              Height="Auto" Width="Auto">
+	<!--
+	Définir la classe vue: MasterView
+	x:Class="MVVM.View.MasterView"
+	
+	Définir le namespace ViewModel
+	xmlns:ViewModel="clr-namespace:MVVM.ViewModel"
+	-->
 	<UserControl.Resources>
+		<!--
+		Désinger la classe PersonViewModel
+		-->
 		<DataTemplate DataType="{x:Type ViewModel:PersonViewModel}">
 			<StackPanel Orientation="Horizontal">
 				<TextBlock Text="{Binding FirstName}" Margin="0,0,5,0"/>
